# kore

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  mach  run.bat  run_release.bat  setup_cert.bat
.cargo/: config.toml
components/browser/: Cargo.toml
components/browser/src/: app.rs  error.rs  lib.rs  renderer.rs  session.rs  tab.rs
components/css/: Cargo.toml
components/css/src/: ast.rs  cascade.rs  color.rs  lib.rs  parser.rs  specificity.rs  tokenizer.rs
components/devtools/: Cargo.toml
components/devtools/src/: console.rs  elements.rs  lib.rs  network.rs  state.rs  storage.rs
components/extensions/: Cargo.toml
components/extensions/src/: api.rs  extension.rs  lib.rs  manager.rs  manifest.rs  process.rs
components/font/: Cargo.toml
components/font/src/: cache.rs  lib.rs  shaper.rs  tests.rs
components/gpu/: Cargo.toml
components/gpu/src/: atlas.rs  display_list.rs  error.rs  lib.rs  pipeline.rs  renderer.rs  tests.rs  vertex.rs
components/gpu/src/shaders/: circle.wgsl  rect.wgsl  text.wgsl
components/html/: Cargo.toml
components/html/src/: lib.rs  parser.rs  tokenizer.rs  tree.rs
components/ipc/: Cargo.toml
components/ipc/src/: channel.rs  lib.rs  message.rs  transport.rs
components/js/: Cargo.toml
components/js/src/: lib.rs
components/layout/: Cargo.toml
components/layout/src/: engine.rs  geometry.rs  lib.rs  style.rs  tree.rs
components/net/: Cargo.toml
components/net/src/: client.rs  lib.rs  policy.rs
components/pipeline/: Cargo.toml
components/pipeline/src/: animation.rs  error.rs  lib.rs  pipeline.rs
components/renderer/: Cargo.toml
components/renderer/src/: main.rs
components/sandbox/: Cargo.toml
components/sandbox/src/: error.rs  lib.rs  linux.rs  macos.rs  policy.rs  process.rs  sys.rs  windows.rs
components/ui/: Cargo.toml
components/ui/src/: lib.rs  resources.rs  theme.rs
components/window/: Cargo.toml
components/window/src/: builder.rs  error.rs  event.rs  event_loop.rs  handle.rs  lib.rs
docs/: architecture.md
src/: main.rs
ui/: newtab.html  omnibox.js  settings.html  tabs.html  tabs.js  theme.css  toolbar.html
ui/tests/: omnibox.test.js  tabs.test.js  test-runner.js  tests.html  theme.test.js
