[package]
name = "kore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kore"
path = "src/main.rs"

[lints]
workspace = true

[workspace]
members = [
    "components/browser",
    "components/css",
    "components/gpu",
    "components/html",
    "components/ipc",
    "components/layout",
    "components/net",
    "components/renderer",
    "components/sandbox",
    "components/ui",
    "components/window",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/kore"
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
kore-browser = { path = "components/browser" }
kore-gpu = { path = "components/gpu" }
kore-ui = { path = "components/ui" }
kore-window = { path = "components/window" }
pollster = "0.4"
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
winit = { version = "0.30", default-features = false }
url = { workspace = true }

[workspace.dependencies]
bytes = "1.6"
bincode = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url = { version = "2.5", features = ["serde"] }
