[package]
name = "kore-browser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kore-ipc = { path = "../ipc" }
kore-net = { path = "../net" }
kore-sandbox = { path = "../sandbox" }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
