[package]
name = "kore-extensions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kore-ipc = { path = "../ipc" }
kore-sandbox = { path = "../sandbox" }
serde.workspace = true
serde_json = "1.0"
tempfile = "3"
thiserror.workspace = true
url.workspace = true
