[package]
name = "kore-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
