[package]
name = "kore-js"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
boa_engine = "0.19"
kore-html = { path = "../html" }
phf = "0.11"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror.workspace = true
