[package]
name = "kore-js"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
boa_engine = "0.19"
kore-html = { path = "../html" }
kore-net = { path = "../net" }
phf = "0.11"
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
