[package]
name = "kore-layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kore-css = { path = "../css" }
kore-html = { path = "../html" }
serde.workspace = true
thiserror.workspace = true
