[package]
name = "kore-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
futures = "0.3"
kore-css = { path = "../css" }
kore-gpu = { path = "../gpu" }
kore-html = { path = "../html" }
kore-js = { path = "../js" }
kore-layout = { path = "../layout" }
kore-net = { path = "../net" }
serde.workspace = true
thiserror.workspace = true
url.workspace = true
