[package]
name = "kore-renderer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kore-renderer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
kore-gpu = { path = "../gpu" }
kore-ipc = { path = "../ipc" }
kore-window = { path = "../window" }
pollster = "0.4"
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
winit = { version = "0.30", default-features = false }
