[package]
name = "kore-window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
kore-gpu = { path = "../gpu" }
serde.workspace = true
thiserror.workspace = true
wgpu = { version = "22", default-features = false, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
winit = "0.30"
